Fix page move to left when scrollbar shows up

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,10 @@
   font-family: "Montserrat";
 }
 
+html {
+  overflow-y: scroll;
+}
+
 #root {
   display: flex;
   width: 100%;
